# GL_Cherno

./: CMakeLists.txt  setup.sh
src/: main.cpp
